tests/ui/traits/error-reporting/ambiguity-in-dropck-err-reporting.stderr
error[E0107]: missing generics for struct `HandshakeCallback`
  --> $DIR/ambiguity-in-dropck-err-reporting.rs:9:25
   |
LL | impl<C: Clone> Role for HandshakeCallback {
   |                         ^^^^^^^^^^^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `C`
  --> $DIR/ambiguity-in-dropck-err-reporting.rs:8:8
   |
LL | struct HandshakeCallback<C>(C);
   |        ^^^^^^^^^^^^^^^^^ -
help: add missing generic argument
   |
LL | impl<C: Clone> Role for HandshakeCallback<C> {
   |                                          +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
